[package]
name = "murraxcoin-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
futures-util = "*"
tokio = { version = "*", features = ["rt", "macros", "time", "sync"] }
crossbeam-channel = "0.5"
log = "*"